@@ -3,7 +3,7 @@ Description=BAR server
 After=network.target remote-fs.target ypbind.service
 
 [Service]
-Type=simple
+Type=notify
 PIDFile=/run/bar.pid
 ExecStart=/usr/bin/bar --server --pid-file /var/run/bar.pid
 ExecReload=/usr/bin/kill -HUP $MAINPID
